# trade-ledger

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
migrations/: 001_create_trades.sql
src/trade_ledger/: __init__.py  hooks.py  ledger.py
tests/: test_broker_acceptance.py  test_compute_pnl.py  test_hooks.py  test_open_close_gate.py
