[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade-ledger"
version = "0.1.0"
description = "Canonical Postgres-backed trade lifecycle ledger for algorithmic trading systems."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Aries Lao", email = "aries.lao@gmail.com" },
]
keywords = ["trading", "algorithmic-trading", "ledger", "pnl", "fintech", "postgres", "quant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/arieslao/trade-ledger"
Issues = "https://github.com/arieslao/trade-ledger/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/trade_ledger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"
